# New-Beatrice

./: .gitignore  Readme.md  manage.py  mypy.ini  pyproject.toml
audio/: Readme.md  __init__.py  apps.py  client.py  commands.py  encrypt.py  host.py  manager.py  opus.py  packet.py  test.py
audio/connection/: client.py  discord_packet.py  manager.py  packet.py  process_bridge.py  server.py
audio/data/: audio.py  discord_packet.py  encrypt.py  events.py  opus.py
audio/libopus/: opus_bindings.py
audio/processing/: api_client.py  async_file.py  automation.py  channel.py  data.py  events.py  json.py  manager.py  np_types.py  process.py  source.py  stats.py
audio/utils/: constants.py  json.py
beatrice/: settings.py
chatgpt/: apps.py  prompts.py  tools.py
hurricane/: apps.py  commands.py  models.py  utils.py
hurricane/api/: model_types.py  nhc.py  noaa.py
hurricane/migrations/: 0000_create_cyclones_create_noaazone_create_.py  0001_create_cyclonechannel_modify_.py  0002_modify_cyclonechannelid.py
hurricane/web/: index.html
management/basic/: commands.py  models.py
management/basic/migrations/: 0000_create_hicounter.py
management/clean_up/: apps.py  commands.py
management/console/: apps.py  commands.py
management/schedule/: ai.py  apps.py  commands.py  models.py
secret_santa/: apps.py  commands.py  models.py
secret_santa/migrations/: 0000_create_secretsantasession_create_.py
splatgear2/: apps.py  commands.py  jobs.py  models.py  utils.py
splatgear2/migrations/: 0000_create_brand_create_gear_create_skill_.py
suscallout/: .gitignore  apps.py  commands.py
util/: __init__.py  aiohttp_server.py  background_tasks.py
