[tool.poetry]
name = "beatrice"
version = "0.1.0"
description = ""
authors = ["Peter DeVita <mewtwo2643@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
atsume = {git = "https://github.com/pmdevita/hikari-atsume.git"}
aiosqlite = "^0.19.0"
aioconsole = "^0.6.1"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
