[tool.poetry]
name = "beatrice"
version = "0.1.0"
description = ""
authors = ["Peter DeVita <mewtwo2643@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
aioconsole = "^0.6.1"
aiohttp = "^3.8.4"
mypy = "^1.4.1"
sqlalchemy-stubs = "^0.4"
cffi = "^1.15.1"
hikari-atsume = "^0.5.0"
#hikari-atsume = {git = "https://github.com/pmdevita/hikari-atsume.git", branch = "master"}
aiosqlite = "0.19.0"
numpy = "^1.25.2"
pynacl = "^1.5.0"
asyncio-dgram = "^2.1.2"
types-cffi = "^1.15.1.15"
jsonalias = "^0.1.2"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
aiofiles = "^23.2.1"
types-aiofiles = "^23.2.0.0"
orjson = "^3.9.7"
dateparser = "^1.1.8"
tiktoken = "^0.5.1"
openai = "^1.5.0"
pydantic = "^1"


[tool.atsume-mypy]
atsume_settings_module = "beatrice"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
